# loopback-visualizer

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  REVIEW.md  TODO.md  Taskfile.yml  audio_example.cpp  capture_demo.sh  glfwmain.cpp  imgui.ini  main.cpp  main_gui.cpp  main_gui_improved.cpp  main_optimized.cpp  soundwave.glsl  soundwave2.glsl  soundwave_optimized.glsl  vcpkg.json
.github/workflows/: ci.yml
.task/checksum/: build  setup
audio_filters/: CMakeLists.txt
audio_filters/include/audio_filters/: filters.h
audio_filters/src/: filters.cpp
audio_loopback/: CMakeLists.txt
audio_loopback/include/audio_loopback/: audio_capture.h  audio_ring_buffer.h  loopback_recorder.h  ostream_operators.h
audio_loopback/src/: linux_audio_capture.cc  linux_backend.cc  ostream_operators.cpp  windows_backend.cc
cmake/: EmbedShaders.cmake  GenerateShaderHeader.cmake
core/: CMakeLists.txt  option.h  result.h  unit.h
docs/: adaptive-phase-tracking.md  cross-correlation-phase-lock.md  gui-improvement-plan.md  multi-template-design.md
docs/imgui/: README.md  hidpi-scaling.md  input-handling.md  overview.md  patterns.md  performance.md  setup.md  styling-guide.md  troubleshooting.md
shaders/: fade_quad.glsl  soundwave.glsl  soundwave_ghost.glsl  soundwave_optimized.glsl  soundwave_trails.glsl
src/: CMakeLists.txt  main.cpp
src/visualization/: CMakeLists.txt  fft.cpp  fft.h  frequency_analyzer.cpp  frequency_analyzer.h  frequency_filter.cpp  frequency_filter.h  phase_lock_analyzer.cpp  phase_lock_analyzer.h  simple_filters.cpp  simple_filters.h
tests/: CMakeLists.txt  test_audio.cpp  test_audio_ring_buffer.cpp  test_core.cpp  test_fft.cpp  test_main.cpp
